@@ -1,6 +1,9 @@
 #!/bin/sh
 
-aclocal -I macros
+echo "Warning:"
+echo "This script is deprecated, run autoreconf instead, then ./configure as usual."
+echo
+aclocal -I macros --install
 autoheader
 automake -a -c
 autoconf
